--- a/greeters/mydm-gtk-demo-greeter/mydm-gtk-demo-greeter.glade
+++ b/greeters/mydm-gtk-demo-greeter/mydm-gtk-demo-greeter.glade
@@ -4,9 +4,10 @@
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkWindow" id="window1">
     <property name="width_request">340</property>
-    <property name="height_request">200</property>
+    <property name="height_request">240</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">MYDM Gtk Demo Greeter</property>
+    <property name="resizable">False</property>
     <property name="window_position">center</property>
     <signal name="destroy" handler="on_window1_destroy" swapped="no"/>
     <child>
@@ -73,7 +74,32 @@
           </object>
           <packing>
             <property name="x">221</property>
-            <property name="y">150</property>
+            <property name="y">180</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkComboBoxText" id="comboboxtext1">
+            <property name="width_request">160</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+          </object>
+          <packing>
+            <property name="x">20</property>
+            <property name="y">180</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkCheckButton" id="checkbutton1">
+            <property name="label" translatable="yes">Enforce MIT-MAGIC-COOKIE-1 XSecurity</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="xalign">0</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="x">20</property>
+            <property name="y">140</property>
           </packing>
         </child>
       </object>
